[tool.poetry]
name = "blockchain_python"
version = "0.1.0"
description = ""
authors = ["RTavares - OpenMinds  <openmindszone@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
