[tool.poetry]
name = "blockchain-python"
version = "0.1.0"
description = "Simple blockchain in Python - P.O.C."
authors = ["RTavares - OpenMinds <openmindszone@protonmail.com>"]
readme = "README.md"
packages = [{include = "blockchain_python"}]

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.2.0"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
